Key LinkedIn refactor

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+linkedin.api.key=XrgxC2i2_6ac2rHrjj9GjQ
+
