--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -47,6 +47,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.9</version> <!-- Use the latest version available -->
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.1.0</version> <!-- Use the latest version -->
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.1.0</version> <!-- Use the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
