--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,6 +57,18 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.1.0</version> <!-- Use the latest version -->
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
