change username from API from place

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/alumnifeup
 spring.datasource.username=root
 spring.datasource.password=
 
+geonames.username=jenifer12345
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 linkedin.api.key=XrgxC2i2_6ac2rHrjj9GjQ
 
