--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "private": true, 
-  "homepage": "/alumnieiworld",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -19,6 +18,7 @@
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
