storing API Key on the DB and symmetric key on the properties document

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=
 geonames.username=jenifer12345
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-linkedin.api.key=XrgxC2i2_6ac2rHrjj9GjQ
+encryption.key=MiSQDMu6DeELxML90MjfQiyOCvcjnXglKYUKoGg5xMQ=
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
