--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,27 @@ spring.datasource.url=jdbc:mysql://localhost:3306/alumnifeup
 spring.datasource.username=root
 spring.datasource.password=
 
-geonames.username=jenifer12345
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-encryption.key=MiSQDMu6DeELxML90MjfQiyOCvcjnXglKYUKoGg5xMQ=
+
+geonames.username=jenifer12345
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+# Encryption constants
+encryption.key=MiSQDMu6DeELxML90MjfQiyOCvcjnXglKYUKoGg5xMQ=
+encryption.algorithm=AES
+
+# GeoJson creation constants
+json.defaultFileName=emptyFileLocation.json
+
+# API Linkedin constants
+apiLinkedin.endpoint=https://nubela.co/proxycurl/api/v2/linkedin
+apiLinkedin.savePicFolder=C:/alumniProject/frontend/public/Images 
+
+# API GeoCoordinates constants
+apiGeoCoordinates.url=http://api.geonames.org/searchJSON 
+apiGeoCoordinates.username=jenifer12345
+
+# Admin username
+admin.username=admin
