refactor geoJson file location

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,6 +17,7 @@ encryption.algorithm=AES
 
 # GeoJson creation constants
 json.defaultFileName=emptyFileLocation.json
+json.fileLocation=backend/src/locationGeoJson
 
 # API Linkedin constants
 apiLinkedin.endpoint=https://nubela.co/proxycurl/api/v2/linkedin
