Excel file validation

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,3 +29,15 @@ apiGeoCoordinates.username=jenifer12345
 
 # Admin username
 admin.username=admin
+
+# Excel constants
+    # Note: If more columns are added it's necessary to refactor method validateExcelFile from ExcelFilesHandler.java
+    #       If the type of a certain column changes, for example from a number to a string, code needs refactor in the same place
+excel.firstColumnName=Número
+excel.secondColumnName=Nome
+excel.thirdColumnName=Link Após Inquérito e Pag. SIGARRA
+excel.forthColumnName=Cursos
+excel.columnNumber=4
+excel.linkedinPerfix=https://www.linkedin.com/in/
+
+
