chnaged cells so it could be more dynamic

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,6 +38,11 @@ excel.secondColumnName=Nome
 excel.thirdColumnName=Link Após Inquérito e Pag. SIGARRA
 excel.forthColumnName=Cursos
 excel.columnNumber=4
+excel.sheet=0
+excel.rowForNumero=0
+excel.rowForNome=1
+excel.rowForLinkedInLink=2
+excel.rowForCursos=3
 excel.linkedinPerfix=https://www.linkedin.com/in/
 
 
