--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.66.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.1.7",
