--- a/api/package.json
+++ b/api/package.json
@@ -31,12 +31,14 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.4",
     "@prisma/client": "^6.4.1",
+    "@types/geojson": "^7946.0.16",
     "@types/multer": "^1.4.12",
     "axios": "^1.8.1",
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "csv-parser": "^3.2.0",
+    "geojson": "^0.5.0",
     "multer": "^1.4.5-lts.1",
     "prisma": "^6.4.1",
     "reflect-metadata": "^0.2.2",
