chore: update dependencies in package.json

--- a/api/package.json
+++ b/api/package.json
@@ -28,22 +28,29 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.12",
     "@nestjs/swagger": "^11.0.4",
     "@prisma/client": "^6.4.1",
     "@types/geojson": "^7946.0.16",
     "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.8.1",
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
+    "exceljs": "^4.4.0",
+    "file-type": "16.5.4",
+    "fs": "^0.0.1-security",
     "geojson": "^0.5.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.5-lts.2",
     "prisma": "^6.4.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "uuid": "^11.1.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
