--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-map-gl": "^8.0.1",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
