--- a/agents-api/pyproject.toml
+++ b/agents-api/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "pandas>=2.2.0",
     "numpy>=1.26.0",
+    "openapi-generator-cli>=7.12.0",
 ]
 
 [project.optional-dependencies]
