--- a/agents-api/pyproject.toml
+++ b/agents-api/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "python-dotenv>=1.0.0",
     "httpx>=0.26.0",
+    "tenacity>=8.2.0",
     "langchain>=0.1.10",
     "langchain-community>=0.1.10",
     "langchain-core>=0.1.10",
