chore: OTP verification for manual submissions (missing email logic) (#12)

--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.12",
     "@nestjs/swagger": "^11.0.4",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.4.1",
     "@types/geojson": "^7946.0.16",
     "@types/multer": "^1.4.12",
@@ -44,6 +45,7 @@
     "file-type": "16.5.4",
     "fs": "^0.0.1-security",
     "geojson": "^0.5.0",
+    "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.2",
     "prisma": "^6.4.1",
     "reflect-metadata": "^0.2.2",
