--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
-    "next": "15.1.7",
+    "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
