--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-spawn": "^7.0.6",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
     "exceljs": "^4.4.0",
