--- a/agents-api/pyproject.toml
+++ b/agents-api/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "pandas>=2.2.0",
     "numpy>=1.26.0",
     "openapi-generator-cli>=7.12.0",
+    "cloudinary>=1.44.0",
+    "openai>=1.73.0",
 ]
 
 [project.optional-dependencies]
