--- a/agents-api/pyproject.toml
+++ b/agents-api/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "openapi-generator-cli>=7.12.0",
     "cloudinary>=1.44.0",
     "openai>=1.73.0",
+    "pgvector>=0.4.0",
 ]
 
 [project.optional-dependencies]
