--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.12",
     "@nestjs/swagger": "^11.0.4",
     "@nestjs/throttler": "^6.4.0",
