--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
+    "loadash": "^1.0.0",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "next": "^15.3.0",
@@ -43,10 +44,12 @@
     "next-cloudinary": "^6.16.0",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-map-gl": "^8.0.1",
     "react-query": "^3.39.3",
+    "react-window": "^1.8.11",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
