--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -49,6 +50,7 @@
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
