--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,7 @@
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
