--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^6.4.1",
     "@types/geojson": "^7946.0.16",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.1",
     "bull": "^4.16.5",
@@ -49,6 +50,7 @@
     "geojson": "^0.5.0",
     "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "prisma": "^6.4.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
