--- a/app/package.json
+++ b/app/package.json
@@ -28,10 +28,13 @@
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.8",
+    "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/postcss": "^4.0.7",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-virtual": "^3.13.6",
+    "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.16",
     "@types/react-virtualized-select": "^3.0.17",
     "add": "^2.0.6",
