major-feat: trend data on the main dashboards (#30)

--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,8 @@
     "cross-spawn": "^7.0.6",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
     "file-type": "16.5.4",
     "fs": "^0.0.1-security",
