--- a/app/package.json
+++ b/app/package.json
@@ -65,6 +65,7 @@
     "react-select": "^5.10.1",
     "react-virtualized-select": "^3.1.3",
     "react-window": "^1.8.11",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
