--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-spring/web": "^10.0.0",
     "@tailwindcss/postcss": "^4.0.7",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-virtual": "^3.13.6",
