--- a/agents-api/pyproject.toml
+++ b/agents-api/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "cloudinary>=1.44.0",
     "openai>=1.73.0",
     "pgvector>=0.4.0",
+    "grandalf>=0.8",
 ]
 
 [project.optional-dependencies]
