--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,8 @@
     "@bull-board/api": "^6.7.9",
     "@bull-board/express": "^6.7.9",
     "@bull-board/nestjs": "^6.7.9",
+    "@nestjs-cls/transactional": "^2.7.0",
+    "@nestjs-cls/transactional-adapter-prisma": "^1.2.20",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^11.0.1",
@@ -52,6 +54,7 @@
     "geojson": "^0.5.0",
     "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.2",
+    "nestjs-cls": "^5.4.3",
     "nodemailer": "^7.0.3",
     "prisma": "^6.4.1",
     "reflect-metadata": "^0.2.2",
