--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.56.4",
     "react-map-gl": "^8.0.1",
     "react-query": "^3.39.3",
     "react-select": "^5.10.1",
@@ -69,8 +70,7 @@
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "zustand": "^5.0.4"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
