--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "PORT=3010 nest start",
+    "start:dev": "cross-env PORT=3010 nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:debug": "PORT=3010 nest start --debug --watch",
     "start:prod": "PORT=3010 node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -67,6 +67,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
     "@types/supertest": "^6.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
