--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack -p 4200",
-    "build": "next build",
+    "build": "npm run generate-sdk && next build",
     "start": "NODE_ENV=production PORT=4200 next start",
     "lint": "next lint",
     "generate-sdk": "ts-node scripts/generate-sdk.ts",
