--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack -p 4200",
-    "build": "npm run generate-sdk && next build",
+    "build": "next build",
     "start": "NODE_ENV=production PORT=4200 next start",
     "lint": "next lint",
     "generate-sdk": "ts-node scripts/generate-sdk.ts",
@@ -84,6 +84,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
