--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-query": "^5.66.9",
     "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.16",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
