feat(dependencies): add cross-env and update various package dependencies in api and app

--- a/app/.env.example
+++ b/app/.env.example
@@ -13,3 +13,7 @@ NEXT_PUBLIC_API_URL="i"
 
 NEXT_PUBLIC_ESCO_BASE_URL="https://esco.ec.europa.eu/en/classification/occupation?uri=http://data.europa.eu/esco/isco/C"
 
+NEXT_PUBLIC_HYPERTUNE_TOKEN=""
+EXPERIMENTATION_CONFIG_ITEM_KEY=""
+HYPERTUNE_FRAMEWORK=""
+HYPERTUNE_OUTPUT_DIRECTORY_PATH=""
