--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.16",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/edge-config": "^1.4.0",
     "@vercel/speed-insights": "^1.2.0",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +46,7 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
+    "hypertune": "^2.7.2",
     "js-cookie": "^3.0.5",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
@@ -66,6 +68,7 @@
     "react-query": "^3.39.3",
     "react-select": "^5.10.1",
     "react-window": "^1.8.11",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
