chore(deploy): add build step to backend deployment workflow and update middleware matcher for resource paths

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -18,4 +18,5 @@ jobs:
           yarn install
           yarn prisma generate
           yarn prisma migrate deploy
+          yarn build
           pm2 restart api
