--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "start": "NODE_ENV=production PORT=4200 next start",
     "lint": "next lint",
     "generate-sdk": "ts-node scripts/generate-sdk.ts",
-    "watch-sdk": "ts-node scripts/watch-sdk.ts"
+    "watch-sdk": "ts-node scripts/watch-sdk.ts",
+    "dev:watch": "concurrently \"npm run dev\" \"npm run watch-sdk\""
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.8",
