--- a/agents-api/pyproject.toml
+++ b/agents-api/pyproject.toml
@@ -22,12 +22,15 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "pandas>=2.2.0",
     "numpy>=1.26.0",
-    "openapi-generator-cli>=7.12.0",
     "cloudinary>=1.44.0",
     "openai>=1.73.0",
     "pgvector>=0.4.0",
-    "grandalf>=0.8",
+    "langchain-openai>=0.3.18",
     "sentence-transformers>=4.1.0",
+    "transformers>=4.52.3",
+    "pillow>=11.2.1",
+    "redis>=6.1.0",
+    "prometheus-client>=0.22.0",
 ]
 
 [project.optional-dependencies]
