feat: profile enhancements

--- a/agents-api/.env.example
+++ b/agents-api/.env.example
@@ -1,2 +1,42 @@
 DATABASE_URL=""
+
+# *** API INFO ***
+PORT=8000
+HOST=0.0.0.0
+LOG_LEVEL=info
+ENVIRONMENT=development
+
+## *** LLM Settings ***
+OPENAI_DEFAULT_MODEL=""
+OPENAI_API_KEY=""
+
+# *** Agent Tracing ***
+#LANGSMITH_TRACING=true
+#LANGSMITH_ENDPOINT=""
+#LANGSMITH_API_KEY=""
+#LANGSMITH_PROJECT=""
+
+# *** File Storage ***
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+
+# *** Alumni Extraction API ***
 PROXYCURL_API_KEY=""
+PROXYCURL_BASE_URL=""
+
+# *** Company Extraction API ***
+BRIGHTDATA_BASE_URL=""
+BRIGHTDATA_API_KEY=""
+BRIGHTDATA_COMPANY_DATASET_ID=""
+
+# *** Other Apps ***
+AGENTS_API_TOKEN=""
+CORS_ORIGINS='["http://localhost:3010", "http://localhost:8080"]'
+
+# *** Geolocation ***
+GEOLOCATION_API_KEY=""
+GEOLOCATION_BASE_URL="http://api.openweathermap.org/geo/1.0/direct?q="
+
+# *** Levels.fyi (Salary data) ***
+LEVELS_FYI_BASE_URL="https://www.levels.fyi/companies"
