--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,13 +1,25 @@
-name: pr-name-linter
+name: PR Title Lint
+
 on:
   pull_request:
-    types: ['opened', 'edited', 'reopened', 'synchronize']
+    types: [opened, edited, synchronize]
 
 jobs:
-  lint:
+  commitlint:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Dependencies
-      run: npm install @commitlint/config-conventional
-    - uses: cognitedata/lint-pr-title-action@v0.2.0
+      - uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Lint PR Title
+        run: |
+          yarn add -D @commitlint/cli @commitlint/config-conventional
+          echo "${{ github.event.pull_request.title }}" | npx commitlint
