--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -20,6 +20,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Lint PR Title
+        continue-on-error: true
         run: |
           yarn add -D @commitlint/cli @commitlint/config-conventional
           echo "${{ github.event.pull_request.title }}" | npx commitlint
