refactor: update API endpoints and configurations for Alumni Extract service

--- a/agents-api/.env.example
+++ b/agents-api/.env.example
@@ -22,8 +22,8 @@ CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
 # *** Alumni Extraction API ***
-PROXYCURL_API_KEY=""
-PROXYCURL_BASE_URL=""
+ALUMNI_EXTRACT_API_KEY=""
+ALUMNI_EXTRACT_BASE_URL=""
 
 # *** Company Extraction API ***
 BRIGHTDATA_BASE_URL=""
